Bug 384371 - ktorrent crashes on enabling ordered download
Summary: ktorrent crashes on enabling ordered download
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-05 06:08 UTC by Vadim A. Misbakh-Soloviov (mva)
Modified: 2018-08-28 19:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
ktorrent.crash.log.xz (36.29 KB, application/x-xz)
2017-10-13 05:24 UTC, Vadim A. Misbakh-Soloviov (mva)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vadim A. Misbakh-Soloviov (mva) 2017-09-05 06:08:14 UTC
Hi! I'm getting ktorrent crashes every time I enable ordered download on newly added torrent (reproduces every time).

See attached crashlog
Comment 1 Vadim A. Misbakh-Soloviov (mva) 2017-09-05 06:09:44 UTC
Oh, btw, I forgot to mention, that I was experience that bug even in 5.0.1 (and, maybe, even earlier).
Comment 2 Christoph Feck 2017-09-27 14:53:28 UTC
Please add the backtrace using the "Add an attachment" link on this page.
Comment 3 Vadim A. Misbakh-Soloviov (mva) 2017-09-27 16:30:56 UTC
Unfortunatelly, bugzilla throws 500 error when I trying to do so.
I guess, it's due to size of the log (6.7M, since there is very long loop between some functions).

Is it another way to upload it somewhere? Or increase limit/fix bugzilla somehow?
Comment 4 Christoph Feck 2017-10-12 16:10:16 UTC
If there is a loop, it should be possible to compress it using 'xz'.
Comment 5 Vadim A. Misbakh-Soloviov (mva) 2017-10-13 05:24:19 UTC
Created attachment 108325 [details]
ktorrent.crash.log.xz

Here it is
Comment 6 Aqeel Zafar 2017-11-14 12:38:51 UTC
Same issue here, on Arch linux, getting it for quite a while now. I think it has been there since ktorrent moved to Plasma 5.

Just a note, when starting ktorrent next time, the downloading order of the file has changed to what was selected (and works flawlessly, automatically changing file download priority as they download).
Comment 7 KE 2017-11-27 18:00:50 UTC
I've the same issue in KDE neon.
Comment 8 Andrius Štikonas 2018-01-30 14:50:07 UTC
Git commit 722c21e56d9e55d69fb6ab4b75847b577cb197fd by Andrius Štikonas, on behalf of Jacopo Guderzo.
Committed on 30/01/2018 at 14:48.
Pushed by stikonas into branch 'master'.

Fix crash when changing file download order

DownloadOrderDialog::commitDownloadOrder() is connected to the accepted
signal, calling accept() inside it causes a loop.

Differential Revision: https://phabricator.kde.org/D10192

M  +0    -1    plugins/downloadorder/downloadorderdialog.cpp

https://commits.kde.org/ktorrent/722c21e56d9e55d69fb6ab4b75847b577cb197fd
Comment 9 Andrius Štikonas 2018-08-28 19:35:40 UTC
Git commit 623c75b86840eda42609a2319e6a101c12fe347f by Andrius Štikonas, on behalf of Jacopo Guderzo.
Committed on 28/08/2018 at 19:27.
Pushed by stikonas into branch '5.1'.

Fix crash when changing file download order

DownloadOrderDialog::commitDownloadOrder() is connected to the accepted
signal, calling accept() inside it causes a loop.

Differential Revision: https://phabricator.kde.org/D10192

M  +0    -1    plugins/downloadorder/downloadorderdialog.cpp

https://commits.kde.org/ktorrent/623c75b86840eda42609a2319e6a101c12fe347f