Fix crash when changing file download order

DownloadOrderDialog::commitDownloadOrder() is connected to the accepted
signal, calling accept() inside it causes a loop.

BUG: 384371

Differential Revision: https://phabricator.kde.org/D10192